# CTP2MiniFuture

./: .gitignore  CMakeLists.txt
api/include/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
src/: MarketData.cpp  MarketData.h  main.cpp
